WriteConcernOptions timeout constants can be used before they are initialized

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Minor - P4
    • 4.1.8
    • Affects Version/s: None
    • Component/s: Internal Code
    • None
    • Fully Compatible
    • ALL
    • Sharding 2019-02-11
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The timeout constants defined under WriteConcernOptions can be used before they are initialized in places where we construct static WriteConcernOptions constants, such as here.

      Because of this, these usages get the zero-initialized value and can lead to unexpected errors.

            Assignee:
            Kaloian Manassiev
            Reporter:
            Kaloian Manassiev
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: