SERVER-39240 Make WriteConcernOptions timeout constants to be constexpr